Sun Aug  5 20:35:09 2001  Brian Gough  <bjg@network-theory.co.uk>

	* configure.in: move PPC bug test to beginning of configure
 	script, to save waiting for it to appear at the end

Sat Jul 14 21:13:55 2001  Brian Gough  <bjg@network-theory.co.uk>

	* gsl_nan.h: use C99X macro INFINITY where available

Fri Jul 13 21:31:01 2001  Brian Gough  <bjg@network-theory.co.uk>

	* templates_on.h: added macros for unqualified views, needed for
 	initialization of views

Mon Jul  9 11:22:16 2001  Brian Gough  <bjg@network-theory.co.uk>

	* configure.in: made check for extended precision registers
 	independent of test for os ieee interface type

Sun Jul  1 22:44:00 2001  Brian Gough  <bjg@network-theory.co.uk>

	* templates_on.h templates_off.h: modified to support views

Wed Jun 27 12:15:19 2001  Brian Gough  <bjg@network-theory.co.uk>

	* configure.in: work around case of broken log1p in OpenBSD

Mon Jun 25 10:21:17 2001  Brian Gough  <bjg@network-theory.co.uk>

	* configure.in: catch case of openbsd, which is not supported yet
 	in ieee directory

Mon Jun 18 22:31:26 2001  Brian Gough  <bjg@network-theory.co.uk>

	* configure.in (GSL_CFLAGS): now just uses includedir for
 	gsl-config.in

Wed Jun  6 18:10:18 2001  Brian Gough  <bjg@network-theory.co.uk>

	* removed explicit dependencies from Makefile.am's since automake
 	now handles these automatically

Tue May 29 12:40:08 2001  Brian Gough  <bjg@network-theory.co.uk>

	* configure.in: added missing wildcard to end of hpux11* to match
 	different versions of hpux11, e.g. hpux11.2.

Tue May 22 10:38:59 2001  Brian Gough  <bjg@network-theory.co.uk>

	* gsl.m4: try to make C-code compatible with C++, also changed
 	return() to exit() as mentioned in the autoconf documentation.

2001-05-21  Mark Galassi  <rosalia@galassi.org>

	* config.guess, config.sub: removed these auto-generated files
	from CVS since they are built for developers by autogen.sh.

Tue May 15 10:59:43 2001  Brian Gough  <bjg@network-theory.co.uk>
