@@ -1,3 +1,8 @@
+Thu Aug  9 22:51:00 2001  Brian Gough  <bjg@network-theory.co.uk>
+
+	* config.h.in: added a macro for discarding a pointer, used to
+ 	suppress warnings from gcc about unused parameters
+
 Sun Aug  5 20:35:09 2001  Brian Gough  <bjg@network-theory.co.uk>
 
 	* configure.in: move PPC bug test to beginning of configure
